   packages from multiple sources will be associated with the correct
   md5 checksums, etc.
 * made sure to null terminate strings of package structure elements in
   case assignment isn't made.
 * added check for correct size of package after download, return incomplete
   download instead of continuing and returning a failed md5 checksum

0.9.8 Dec 18, 2003
 * added slapt-get source to example slapt-getrc
 * updated source creation script, runs PACKAGESTXT and MD5 on all now
 * added --disable-dep-check to skip the dependency checking
 * added support for ROOT enviroment variable for location of packages logs 
   overriding /var/log/packages ("Keary Griffin" <keary@mindless.com>) (FAQ 34)
 * removed check for package existance in the installed pkg list (will now show duplicates)
 * honor --reinstall with upgrades ("Keary Griffin" <keary@mindless.com>)
 * --install now accepts {pkg}-{version} ("Keary Griffin" <keary@mindless.com>) (FAQ 35)
 * initial slack-conflicts support
 * fixed bug with --install {pkg}-{version}, now correctly maps to installed package,
   won't reinstall without --reinstall.
 * updated FAQ with ENV PATH sudo question
 * fixed bug in dist-upgrade dep check loop exiting early
 * cleaned up src/action.c, moved redundant code into add_deps_to_trans()
 * fully implemented slack-conflicts support
 * updated header files, including useful variable names in function definitions
 * silently perform md5 check, complain out loud only if not correct
 * updated translation template and translation files for slack-conflicts
 * --disable-dep-check now works with --remove as well
 * --show now accepts {pkg}-{version}

0.9.7h Dec 08, 2003
 * updated FAQ
 * updated example dropline exclude regex (Francesco Gigli <jaramir@aruba.it>)
 * initialize global_config->exclude_list if EXCLUDE commented out (Francesco Gigli <jaramir@aruba.it>)
 * updated FAQ
 * updated example.slapt-getrc