@@ -18,6 +18,7 @@
    case assignment isn't made.
  * added check for correct size of package after download, return incomplete
    download instead of continuing and returning a failed md5 checksum
+ * added check for empty md5 checksum with notification if so
 
 0.9.8 Dec 18, 2003
  * added slapt-get source to example slapt-getrc
